--- a/2. Phase 1 - IAM Users.md
+++ b/2. Phase 1 - IAM Users.md
@@ -79,11 +79,11 @@ Test by creating an S3 bucket with that user’s credentials.
 
 Resources
 
-[AWS IAM Users Documentation](https://chatgpt.com/c/68ac7e36-a340-8326-9649-2c07c4c59e0c#:~:text=AWS%20IAM%20Users-,Documentation,-IAM%20Policy%20Examples)
+[AWS IAM Users Documentation](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users.html)
 
-[IAM Policy Examples](https://chatgpt.com/c/68ac7e36-a340-8326-9649-2c07c4c59e0c#:~:text=IAM%20Policy-,Examples,-Security%20Best%20Practices)
+[IAM Policy Examples](https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_examples.html)
 
-[Security Best Practices in IAM](https://chatgpt.com/c/68ac7e36-a340-8326-9649-2c07c4c59e0c#:~:text=Security-,Best,-Practices%20in%20IAM)
+[Security Best Practices in IAM](https://docs.aws.amazon.com/IAM/latest/UserGuide/best-practices.html)
 
 
 This lessons cover the:
