Update 2. Phase 1 - IAM Users.md

--- a/2. Phase 1 - IAM Users.md
+++ b/2. Phase 1 - IAM Users.md
@@ -26,17 +26,17 @@ Each user has:
 
 ### Step 2: Create a New User
 - Click **Users → Add User**
-- Enter **username** (e.g., `dev-user`)
+- Enter **username** (e.g., dev-user)
 - Select **Access Type**:
   -  Programmatic Access (for CLI/SDK access)
   -  AWS Management Console Access (for UI access)
 
 ### Step 3: Assign Permissions
-- Attach existing policies (e.g., `AmazonS3ReadOnlyAccess`)
+- Attach existing policies (e.g., AmazonS3ReadOnlyAccess)
 - OR create a group with defined permissions (recommended)
 
 ### Step 4: Review and Create
-- Download credentials file (`.csv`) for safekeeping
+- Download credentials file (.csv) for safekeeping
 - Login URL is provided for console access
 
 
