Update 3. Pase 1 - IAM Roles.md

--- a/3. Pase 1 - IAM Roles.md
+++ b/3. Pase 1 - IAM Roles.md
@@ -25,12 +25,12 @@ Unlike IAM Users:
 
 ### Step 2: Create Role
 - Choose **AWS Service** → **EC2**
-- Attach policy → e.g., `AmazonS3ReadOnlyAccess`
-- Name the role → `EC2S3ReadOnlyRole`
+- Attach policy → e.g., AmazonS3ReadOnlyAccess
+- Name the role → EC2S3ReadOnlyRole
 
 ### Step 3: Assign Role to EC2 Instance
 - Launch or select an EC2 instance
-- Attach IAM Role `EC2S3ReadOnlyRole`
+- Attach IAM Role EC2S3ReadOnlyRole
 
 ### Step 4: Test Permissions
 - SSH into EC2 instance
